# streamlit-image-process-manager

./: .env  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  router.py
.streamlit/: config.toml
database/: database.py  models.py
database/cruds/: image_data.py
pages/: 04_🤖_only_streamlit_function.py  1_🚀_processed_check_page.py  2_📑_bonus_comment_page.py  3_⚠️_README.py
services/: ObjectDetection.py  delete_image_data.py  dummy_heavy_image_processing.py  initialize_setting.py
src/database/: database.py
src/database/cruds/: processed_image_data.py
src/schemas/: schemas.py
src/services/: initialize_setting.py
src/utils/: aggrid_dataframe.py  format_datetime_column.py
src/views/: README.py  dynamic_graph.py  main_manage.py  only_streamlit_function.py
utils/: encode_image.py  image_utils.py  send_line_message.py
views/: comment_page.py  main_manage.py  only_streamlit_function.py  processed_check_page.py
